<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Kids Radio</string>

	<!-- Server Fragment -->
	<string name="title_server">Server</string>
	<string name="folder_list_empty">Folder is empty</string>
	<string name="device_list_empty">No UPNP devices found.
		\nNew devices will be added automatically when they are available.</string>

	<!-- Route Fragment -->
	<string name="title_route">Route</string>
	<string name="playlist_empty">Playlist is empty</string>
	<string name="route_list_empty">No routes found.
		\nNew routes will be added automatically when they are available.</string>

	<!-- Playback controls -->
	<string name="play">Play</string>
	<string name="pause">Pause</string>
	<string name="previous">Previous</string>
	<string name="next">Next</string>
	<string name="shuffle">Shuffle</string>
	<string name="repeat">Repeat</string>

	<!-- Toasts/Dialogs -->
	<string name="exit_renderer">Do you really want to exit the renderer?
		Playback will be stopped.</string>
	<string name="select_route">Please select a route</string>
	<string name="enable_wifi_dialog">Wifi needs to be connected for playback.
		Do you want to enable it now?</string>
	<string name="volume_text">Volume: %1$d/%2$d</string>

	<!-- Description for local playback device -->
	<string name="local_device">Local Device</string>

	<!-- Image alt text -->
	<string name="album_art">Album Art</string>

	<!-- MediaRouter strings -->
	<string name="upnp_route_provider_service">UPNP Route Provider Service</string>
	
	<!-- Developer contact mail with '@', '.' replaced -->
	<string name="contact_mail" translatable="false">matthias.goebl%1$sgoebl%2$snet</string>

	<!-- Title for the Refresh Devices Action-->
	<string name="refresh_title">Refresh Devices</string>

	<!-- Title for the Clear Playlist Action-->
	<string name="clear_list_title">Clear Playlist</string>

	<!-- Title for the About Menu-->
	<string name="about_title">About</string>

	<!-- Text for the About Box-->
	<string name="about_text">ControlDLNA - a UPnP media control point
		\nOriginal version:
		\nCopyright (c) 2013, Felix Ableitner, All rights reserved.
		\nModifications:
		\nCopyright (c) 2016 Adam Baker, All rights reserved.
		\n
		\nBSD 3-Clause License
		\n
	</string>

	<!-- Title for the SettingsActivity -->
	<string name="settings_title">Preferences</string>

	<!-- Title for preference to enable wifi on start -->
	<string name="enable_wifi_title">Automatically enable Wifi on start</string>

	<!-- Values for preference to auto-enable wifi on start -->
	<string-array name="enable_wifi_value_titles">
		<item>yes</item>
		<item>no</item>
		<item>ask</item>
	</string-array>

	<!-- Title for the pause playback on call preference -->
	<string name="incoming_phone_call_pause">Pause playback on incoming phone call</string>
	
	<!-- Title for the playback local device preference -->
	<string name="playback_local_device">Play directly on local device</string>
	
	<!-- Title and messages for the servername filter preference -->
	<string name="servername_filter">Filter server list</string>
	<string name="servername_filter_title">Set filter for server list</string>
	<string name="servername_filter_message">Only servers whose names match the following regular expression will be listed (the default \".*\" includes all available servers)</string>
	<string name="servername_filter_default">.*Kids.Radio.*</string>
	
	<!-- Title for the intelligent track selection preference -->
	<string name="intelligent_track_selection">Intelligent track selection</string>

	<!-- Title for the reduced_layout preference -->
	<string name="reduced_layout">Reduced layout</string>

	<!-- Title for the hide_options preference -->
	<string name="hide_options">Hide options menu (one-way!)</string>

	<!-- Title for the contact developer preference -->
	<string name="contact_dev_title">Contact Developer</string>

	<!-- Appended to all routes provided by a debug build -->
	<string name="debug">Debug</string>
	
</resources>
