<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<ListPreference
			android:key="enable_wifi_on_start"
			android:title="@string/enable_wifi_title"
			android:entries="@array/enable_wifi_value_titles"
			android:entryValues="@array/enable_wifi_values"
			android:defaultValue="ask"/>

	<CheckBoxPreference
			android:key="incoming_phone_call_pause"
			android:title="@string/incoming_phone_call_pause"
			android:defaultValue="true" />

	<CheckBoxPreference
			android:key="playback_local_device"
			android:title="@string/playback_local_device"
			android:defaultValue="false" />

	<EditTextPreference android:key="servername_filter"
			android:title="@string/servername_filter"
			android:dialogTitle="@string/servername_filter_title"
			android:dialogMessage="@string/servername_filter_message"
			android:defaultValue="@string/servername_filter_default" />

	<CheckBoxPreference
			android:key="intelligent_track_selection"
			android:title="@string/intelligent_track_selection"
			android:defaultValue="false" />

	<Preference
			android:key="contact_dev"
			android:title="@string/contact_dev_title" />

</PreferenceScreen>